--- a/style.css
+++ b/style.css
@@ -17,12 +17,11 @@ nav{
 }
 
 #logo{
-    width: 120px;
-    height: 40px;
+    width: 128px;
+    height: 32px;
 }
 
 ul {
-    display: flex;
     display: flex;
     justify-content: space-evenly;
 }
@@ -44,11 +43,25 @@ li a{
     background-color: #00b289;
     color: white;
     width: 100px;
-    height: 30px;
+    height: 40px;
     border: 1px solid #00b289;
     border-radius: 4px;
+    cursor: pointer;
+    margin-left: 17px;
 }
 
-#btn2 a:hover{
-    background-color: aqua;
+#btn{
+    margin-left: 17px;
+    color: #00b289;
+    width: 80px;
+    height: 40px;
+    border: 1px solid #00b289;
+    border-radius: 4px;
+    cursor: pointer;
 }
+
+#btn a:hover{
+    background-color: #00b289;
+
+}
+
